# storagy-repo-1

./: README.md
i6robotics/install/: local_setup.sh  setup.sh
i6robotics/install/i6robotics_guiding/share/i6robotics_guiding/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
i6robotics/install/i6robotics_guiding/share/i6robotics_guiding/srv/: SetGoalChoice.srv
i6robotics/log/: latest_build
i6robotics/src/guiding_services/: CMakeLists.txt  package.xml
i6robotics/src/guiding_services/srv/: SetGoalChoice.srv  SetGoalPose.srv
i6robotics/src/i6robotics_control/: package.xml  setup.cfg  setup.py
i6robotics/src/i6robotics_control/i6robotics_control/: aruco_maker.py  backup_control_action_clinets.py  control_action_clients.py  follow_action_server.py  follow_srv_server.py  i6robotics_control_navigation.py  i6robotics_control_navigation_action_node.py  i6robotics_control_navigation_service.py  service_example.py  test.py  test_sub.py
i6robotics/src/i6robotics_control_msgs/: CMakeLists.txt  package.xml
i6robotics/src/i6robotics_data_processing/: setup.cfg  setup.py
i6robotics/src/i6robotics_get_data/: setup.cfg  setup.py
i6robotics/src/i6robotics_guiding/: setup.cfg  setup.py
i6robotics/src/i6robotics_msgs/: CMakeLists.txt  package.xml
i6robotics/src/inrobot_code/: compressed_image.py  sync_image.py
shoppingmate/: App.js  Bottom.js  Header.js  app.json  index.html  package-lock.json  package.json
shoppingmate/navigation/: Cart.js  Main.js  Manual.js  Map.js  Searching.js
(+163 files in other folders)
